Fixed a typo in the nginx conf.

--- a/prod/nginx.conf
+++ b/prod/nginx.conf
@@ -51,6 +51,6 @@ server {
 	listen 80;
 	server_name assets.happo.matchstrike.net;
 	
-	root /srv/www/happo.matchstrike.net/happo.matchstrike/assets/;
+	root /srv/www/happo.matchstrike.net/happo/assets/;
 	expires max;
 }
